tests/reference/ast_new-string2-44323ea.stderr
tokenizer error: Token '"' is not recognized
 --> tests/parser/string2.py:6:1
  |
6 | "\
  | ^ token not recognized
